bad/assign_null_int.example_compiler_output
ERROR
[1mbad/assign_null_int.lat:4:7: [1;31merror: [0;1mleft side is not assignable[m
	null = 42;
	     [1;32m^[m
[1mbad/assign_null_int.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	null = 42;
	[1;32m^[m
